# qt_tasks

./: .gitignore
comp_widgets/: CMakeLists.txt  main.cpp
find_dialog/: CMakeLists.txt  find_dialog.cc  find_dialog.h  main.cpp
go_to_cell/: CMakeLists.txt  find_cell.cc  find_cell.h  go_to_cell.ui  main.cpp
hello_qt/: CMakeLists.txt  main.cpp
hello_user/: CMakeLists.txt  main.cpp
text_finder/: CMakeLists.txt  sample.txt  textfinder.cpp  textfinder.h  textfinder.ui
